--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,7 @@
     "clean": "rm -rf dist server coverage"
   },
   "devDependencies": {
-    "@aws-sdk/client-bedrock": "^3.679.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.697.0",
     "@builder.io/qwik": "^1.9.1",
     "@builder.io/qwik-city": "^1.9.1",
     "@types/eslint": "8.56.10",
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "@typescript-eslint/parser": "7.16.1",
     "@vitest/coverage-v8": "^2.1.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "^1.9.1",
     "prettier": "3.3.3",
