--- a/cdk/package.json
+++ b/cdk/package.json
@@ -16,7 +16,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "2.164.1",
+    "aws-cdk": "2.167.2",
     "esbuild": "^0.24.0",
     "eslint": "^9.12.0",
     "prettier": "^3.3.3",
@@ -27,9 +27,9 @@
     "typescript-eslint": "^8.9.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.164.1",
+    "aws-cdk-lib": "2.167.2",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21",
-    "truemark-cdk-lib": "^1.16.0-alpha.2"
+    "truemark-cdk-lib": "1.18.1-alpha.1732141583"
   }
 }
