--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "install-ui": "cd ui && pnpm i --frozen-lockfile",
+    "install-app": "cd app && pnpm i --frozen-lockfile",
     "install-cdk": "cd cdk && pnpm i --frozen-lockfile",
-    "install-all": "concurrently \"pnpm:install-ui\" \"pnpm:install-cdk\" -c cyan,green,blue,yellow,magenta,gray",
+    "install-all": "concurrently \"pnpm:install-app\" \"pnpm:install-cdk\" -c cyan,green,blue,yellow,magenta,gray",
     "postinstall": "pnpm run install-all",
-    "build-ui": "cd ui && pnpm run build",
+    "build-app": "cd app && pnpm run build",
     "build-cdk": "cd cdk && pnpm run build",
-    "build": "concurrently \"pnpm:build-ui\" \"pnpm:build-cdk\" -c blue,yellow,magenta,gray",
-    "test-ui": "cd ui && pnpm run test",
+    "build": "concurrently \"pnpm:build-app\" \"pnpm:build-cdk\" -c blue,yellow,magenta,gray",
+    "test-app": "cd app && pnpm run test",
     "test-cdk": "cd cdk && pnpm run test",
-    "test": "concurrently \"pnpm:test-ui\" \"pnpm:test-cdk\" -c blue,yellow,magenta,gray",
-    "fmt-ui": "cd ui && pnpm run fmt",
+    "test": "concurrently \"pnpm:test-app\" \"pnpm:test-cdk\" -c blue,yellow,magenta,gray",
+    "fmt-app": "cd app && pnpm run fmt",
     "fmt-cdk": "cd cdk && pnpm run fmt",
-    "fmt": "concurrently \"pnpm:fmt-ui\" \"pnpm:fmt-cdk\" -c cyan,green,blue,yellow,magenta,gray",
-    "watch-ui": "cd ui && pnpm run dev",
+    "fmt": "concurrently \"pnpm:fmt-app\" \"pnpm:fmt-cdk\" -c cyan,green,blue,yellow,magenta,gray",
+    "watch-app": "cd app && pnpm run dev",
     "watch-cdk": "cd cdk && pnpm run watch",
-    "watch": "concurrently \"pnpm:watch-ui\" \"pnpm:watch-cdk\" -c cyan,green,blue,yellow,magenta,gray",
+    "watch": "concurrently \"pnpm:watch-app\" \"pnpm:watch-cdk\" -c cyan,green,blue,yellow,magenta,gray",
     "ecr-login": "./scripts/ecr-login.sh",
     "cdk-deploy": "./scripts/cdk-deploy.sh",
     "cdk-diff": "./scripts/cdk-deploy.sh diff"
