--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "source-map-support": "^0.5.21",
     "tailwindcss": "^3.4.14",
     "typescript": "5.4.5",
+    "typescript-eslint": "^8.15.0",
     "undici": "*",
     "vite": "5.3.5",
     "vite-tsconfig-paths": "^4.2.1",
