--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,9 +1,21 @@
 {
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
-  "name": "qwik-project-name",
-  "short_name": "Welcome to Qwik",
+  "name": "Ask Bob, a Generative AI Chatbot create by TrueMark run on AWS",
+  "short_name": "Ask Bob",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
-  "description": "A Qwik project app."
+  "description": "Welcome to Ask Bob, a generative AI chatbot created by TrueMark. Ask Bob anything and he will generate a response for you.",
+  "icons":[
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
