--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "typescript": "5.4.5",
     "typescript-eslint": "^8.15.0",
     "undici": "*",
+    "uuid": "^11.0.3",
     "vite": "5.3.5",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^2.1.3"
