--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
   "type": "module",
   "scripts": {
     "install-resolvers": "cd resolvers && pnpm i --frozen-lockfile",
+    "install-handlers": "cd handlers && pnpm i --frozen-lockfile",
     "install-app": "cd app && pnpm i --frozen-lockfile",
     "install-cdk": "cd cdk && pnpm i --frozen-lockfile",
-    "install-all": "concurrently \"pnpm:install-resolvers\" \"pnpm:install-app\" \"pnpm:install-cdk\" -c auto",
+    "install-all": "concurrently \"pnpm:install-resolvers\" \"pnpm:install-handlers\" \"pnpm:install-app\" \"pnpm:install-cdk\" -c auto",
     "postinstall": "pnpm run install-all",
     "build-resolvers": "cd resolvers && pnpm run build",
+    "build-handlers": "cd handlers && pnpm run build",
     "build-app": "cd app && pnpm run build",
     "build-cdk": "cd cdk && pnpm run build",
-    "build": "concurrently \"pnpm:build-resolvers\" \"pnpm:build-app\" \"pnpm:build-cdk\" -c auto",
+    "build": "concurrently \"pnpm:build-resolvers\" \"pnpm:build-handlers\" \"pnpm:build-app\" \"pnpm:build-cdk\" -c auto",
+    "test-handlers": "cd handlers && pnpm run test",
     "test-app": "cd app && pnpm run test",
     "test-cdk": "cd cdk && pnpm run test",
-    "test": "concurrently \"pnpm:test-app\" \"pnpm:test-cdk\" -c auto",
+    "test": "concurrently \"pnpm:test-handlers\" \"pnpm:test-app\" \"pnpm:test-cdk\" -c auto",
     "fmt-resolvers": "cd resolvers && pnpm run fmt",
+    "fmt-handlers": "cd handlers && pnpm run fmt",
     "fmt-app": "cd app && pnpm run fmt",
     "fmt-cdk": "cd cdk && pnpm run fmt",
-    "fmt": "concurrently \"pnpm:fmt-resolvers\" \"pnpm:fmt-app\" \"pnpm:fmt-cdk\" -c auto",
+    "fmt": "concurrently \"pnpm:fmt-resolvers\" \"pnpm:fmt-resolvers\" \"pnpm:fmt-app\" \"pnpm:fmt-cdk\" -c auto",
     "watch-resolvers": "cd resolvers && pnpm run watch",
+    "watch-handlers": "cd handlers && pnpm run watch",
     "watch-app": "cd app && pnpm run dev",
     "watch-cdk": "cd cdk && pnpm run watch",
-    "watch": "concurrently \"pnpm:watch-resolvers\" \"pnpm:watch-app\" \"pnpm:watch-cdk\" -c auto",
+    "watch": "concurrently \"pnpm:watch-resolvers\" \"pnpm:watch-handlers\" \"pnpm:watch-app\" \"pnpm:watch-cdk\" -c auto",
     "ecr-login": "./scripts/ecr-login.sh",
     "cdk-deploy": "./scripts/cdk-deploy.sh",
     "cdk-diff": "./scripts/cdk-deploy.sh diff"
