--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,23 +13,23 @@
     "fmt": "prettier --write ."
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "22.5.4",
-    "@types/prettier": "2.6.0",
-    "aws-cdk": "2.167.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.10.1",
+    "@types/prettier": "2.7.3",
+    "aws-cdk": "2.172.0",
     "esbuild": "^0.24.0",
-    "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
+    "eslint": "^9.16.0",
     "jest": "^29.7.0",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.9.0"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.18.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.167.2",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "2.172.0",
+    "constructs": "^10.4.2",
     "source-map-support": "^0.5.21",
-    "truemark-cdk-lib": "1.18.1-alpha.1732141583"
+    "truemark-cdk-lib": "1.18.0-beta.1733858402"
   }
 }
